[gd_scene load_steps=18 format=3 uid="uid://dsdl6uekdjrcs"]

[ext_resource type="Script" uid="uid://bblqs45doe2n7" path="res://scripts/games_menu.gd" id="1_f0vw0"]
[ext_resource type="Texture2D" uid="uid://gg4cmpujcelk" path="res://assets/ikemen-logo.svg" id="2_hrepa"]
[ext_resource type="PackedScene" uid="uid://ciy4cld0pbacv" path="res://scenes/load_ikemen_folders/no_launcher_configuration_found.tscn" id="3_0yveu"]
[ext_resource type="PackedScene" uid="uid://05hbsiiqldma" path="res://scenes/settings.tscn" id="3_8xssk"]
[ext_resource type="PackedScene" uid="uid://cycggxr4ksn78" path="res://scenes/create_new_ikemen_window.tscn" id="3_x7kyj"]
[ext_resource type="Script" uid="uid://n2sydamb4j5j" path="res://scripts/https_requests.gd" id="4_kx00j"]
[ext_resource type="PackedScene" uid="uid://bvn0nsupvvx1c" path="res://scenes/download_menu/confirm_dialog.tscn" id="5_brox0"]
[ext_resource type="Script" uid="uid://bdheds1cesbl3" path="res://scripts/download_request.gd" id="6_6eyi2"]
[ext_resource type="PackedScene" uid="uid://b5dhyvd6ul4rd" path="res://scenes/download_menu/download_panel.tscn" id="6_gif6u"]
[ext_resource type="PackedScene" uid="uid://bnem82k2aeib7" path="res://scenes/about_window.tscn" id="8_1ee4f"]
[ext_resource type="Script" uid="uid://bcmkce5xdlbod" path="res://scripts/update_request.gd" id="9_vag7o"]

[sub_resource type="Gradient" id="Gradient_6l1cc"]
offsets = PackedFloat32Array(0, 0.357143, 0.598214, 0.848214)
colors = PackedColorArray(0, 0.142828, 0.864195, 1, 0.423529, 0.654902, 0.890196, 1, 0.180392, 1, 1, 1, 0.392157, 0.913725, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pvc2n"]
gradient = SubResource("Gradient_6l1cc")
fill_from = Vector2(0.0375, 0.459375)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xx5x0"]

[sub_resource type="SystemFont" id="SystemFont_4r2vo"]

[sub_resource type="LabelSettings" id="LabelSettings_f7x7w"]
font = SubResource("SystemFont_4r2vo")
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rcmd1"]
shadow_color = Color(0, 0, 0, 1)

[node name="GamesMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f0vw0")
list_ignore = [NodePath("LoadFolder"), NodePath("Settings"), NodePath("About")]
save_file_name = "launcher_config.json"
auto_load_settings = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_pvc2n")

[node name="Border" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0373264
anchor_top = 0.0756173
anchor_right = 0.93316
anchor_bottom = 0.905864
grow_horizontal = 2
grow_vertical = 2
color = Color(0.544226, 9.68631e-07, 1.44392e-07, 1)
metadata/_edit_use_anchors_ = true

[node name="List" type="Control" parent="."]
anchors_preset = 0
offset_right = 1057.0
offset_bottom = 506.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="List"]
layout_mode = 0
offset_left = 54.0
offset_top = 54.0
offset_right = 1069.0
offset_bottom = 583.0
color = Color(0.811765, 0.439216, 0.439216, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="List"]
layout_mode = 0
offset_left = 54.0
offset_top = 55.0
offset_right = 1068.0
offset_bottom = 583.0

[node name="FlowContainer" type="FlowContainer" parent="List/ScrollContainer"]
custom_minimum_size = Vector2(1014, 528)
layout_mode = 2

[node name="AddIkemen" type="Button" parent="List/ScrollContainer/FlowContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xx5x0")
text = "Add new 
IKEMEN Go
game"

[node name="GamePanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -68.0
offset_right = 34.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_hrepa")
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -86.5
offset_right = 86.5
offset_bottom = 49.0
grow_horizontal = 2
text = "Ikemen GO Launcher
-new menu prototype-"
label_settings = SubResource("LabelSettings_f7x7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -214.0
offset_top = 29.0
offset_right = -88.0
offset_bottom = 52.0
grow_horizontal = 0
text = "Version: 0.0.2.0-alpha"
label_settings = SubResource("LabelSettings_rcmd1")

[node name="Debug" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 515.0
grow_vertical = 0
text = "Debug mode enabled, creating ikemen go wouldn't create any files"

[node name="LoadFolder" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Load ikemen go folders"

[node name="FileDialog" type="FileDialog" parent="LoadFolder"]
title = "Open a Directory"
initial_position = 1
size = Vector2i(800, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="About" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 356.0
offset_top = -31.0
offset_right = 411.0
grow_vertical = 0
text = "About"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 70.0
grow_vertical = 0
text = "Settings
"

[node name="SettingsWindow" parent="Settings" instance=ExtResource("3_8xssk")]
visible = false

[node name="DownloadPanel" parent="." instance=ExtResource("6_gif6u")]
visible = false
layout_mode = 1

[node name="NoConfigPanel" parent="." instance=ExtResource("3_0yveu")]
visible = false
layout_mode = 1

[node name="CreateNewIkemen" parent="." instance=ExtResource("3_x7kyj")]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("4_kx00j")

[node name="Download" type="HTTPRequest" parent="HTTPRequest"]
script = ExtResource("6_6eyi2")

[node name="Update" type="HTTPRequest" parent="HTTPRequest"]
script = ExtResource("9_vag7o")

[node name="ConfirmDialog" parent="." instance=ExtResource("5_brox0")]

[node name="NoFilesDialog" parent="." instance=ExtResource("5_brox0")]
auto_translate_mode = 1
dialog_text = "A .godot_launcher configuration folder has been found, however there are no files.
In order to play the game, it needs to be downloaded first.
If you cancel now, you can download it later by accessing the game through the launcher.
Proceed download?"

[node name="AboutWindow" parent="." instance=ExtResource("8_1ee4f")]

[connection signal="pressed" from="List/ScrollContainer/FlowContainer/AddIkemen" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LoadFolder" to="." method="_on_load_folder_pressed"]
[connection signal="dir_selected" from="LoadFolder/FileDialog" to="." method="_on_load_ikemen_folders_dir_selected"]
[connection signal="pressed" from="About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="reset_folders" from="Settings/SettingsWindow" to="." method="_on_settings_window_reset_folders"]
[connection signal="save_folders" from="Settings/SettingsWindow" to="." method="_on_settings_window_save_folders"]
[connection signal="create_default_operation" from="NoConfigPanel" to="." method="_on_no_config_panel_create_default_operation"]
[connection signal="skip_operation" from="NoConfigPanel" to="." method="_on_no_config_panel_skip_operation"]
[connection signal="close_requested" from="CreateNewIkemen" to="." method="_on_create_new_ikemen_close_requested"]
[connection signal="edit_ikemen" from="CreateNewIkemen" to="." method="_on_edit_ikemen_pressed"]
[connection signal="fetch_request" from="CreateNewIkemen" to="." method="_on_create_new_ikemen_fetch_request"]
[connection signal="new_ikemen_created" from="CreateNewIkemen" to="." method="_on_create_new_ikemen_new_ikemen_created"]
[connection signal="request_completed" from="HTTPRequest" to="HTTPRequest" method="_on_request_completed"]
[connection signal="request_completed" from="HTTPRequest/Download" to="." method="_on_download_request_completed"]
[connection signal="request_completed" from="HTTPRequest/Update" to="." method="_on_update_request_completed"]
[connection signal="canceled" from="ConfirmDialog" to="." method="_on_confirm_dialog_canceled"]
[connection signal="confirmed" from="ConfirmDialog" to="." method="_on_confirm_dialog_confirmed"]
[connection signal="canceled" from="NoFilesDialog" to="." method="_on_confirm_dialog_canceled"]
[connection signal="confirmed" from="NoFilesDialog" to="." method="_on_confirm_dialog_confirmed"]
[connection signal="close_requested" from="AboutWindow" to="." method="_on_about_window_close_requested"]
